src/Parser/y.output
   0  $accept : programa $end

   1  programa : bloque

   2  bloque : sentencia
   3         | '{' bloque_sentencias '}'
   4         | error_bloque

   5  error_bloque : error bloque_sentencias '}'
   6               | '{' bloque_sentencias error

   7  bloque_sentencias : sentencia
   8                    | bloque_sentencias sentencia

   9  sentencia : declaracion ';'
  10            | ejecucion ';'
  11            | error_sentencia

  12  error_sentencia : declaracion error
  13                  | ejecucion error

  14  declaracion : tipo lista_de_variables
  15              | procedimiento

  16  lista_de_variables : lista_de_variables ',' IDE
  17                     | IDE

  18  procedimiento : PROC IDE '(' lista_de_parametros ')' NI '=' CTE_UINT '{' bloque_sentencias '}'

  19  lista_de_parametros : param
  20                      | param ',' param
  21                      | param ',' param ',' param

  22  param : tipo IDE
  23        | REF tipo IDE

  24  tipo : UINT
  25       | DOUBLE

  26  ejecucion : control
  27            | seleccion
  28            | salida
  29            | asignacion
  30            | invocacion

  31  control : FOR '(' IDE '=' CTE_UINT ';' condicion ';' inc_decr CTE_UINT ')' '{' bloque_sentencias '}'

  32  condicion : expresion comparador expresion

  33  expresion : expresion '+' termino
  34            | expresion '-' termino
  35            | termino
  36            | DOUBLE '(' expresion ')'

  37  termino : termino '*' factor
  38          | termino '/' factor
  39          | factor

  40  factor : cte
  41         | factor_negado
  42         | IDE

  43  cte : CTE_DOUBLE
  44      | CTE_UINT

  45  factor_negado : '-' CTE_DOUBLE

  46  comparador : '<'
  47             | '>'
  48             | IGUAL_IGUAL
  49             | MAYOR_IGUAL
  50             | MENOR_IGUAL
  51             | DISTINTO

  52  inc_decr : UP
  53           | DOWN

  54  seleccion : IF '(' condicion ')' '{' bloque_sentencias '}' END_IF
  55            | IF '(' condicion ')' '{' bloque_sentencias '}' ELSE '{' bloque_sentencias '}' END_IF

  56  salida : OUT '(' CADENA ')'

  57  asignacion : IDE '=' expresion

  58  invocacion : IDE '(' parametros ')'

  59  parametros : IDE ':' IDE
  60             | parametros ',' IDE ':' IDE

state 0
	$accept : . programa $end  (0)

	error  shift 1
	IDE  shift 2
	IF  shift 3
	OUT  shift 4
	UINT  shift 5
	DOUBLE  shift 6
	FOR  shift 7
	PROC  shift 8
	'{'  shift 9
	.  error

	programa  goto 10
	bloque  goto 11
	sentencia  goto 12
	error_bloque  goto 13
	declaracion  goto 14
	ejecucion  goto 15
	error_sentencia  goto 16
	tipo  goto 17
	procedimiento  goto 18
	control  goto 19
	seleccion  goto 20
	salida  goto 21
	asignacion  goto 22
	invocacion  goto 23


state 1
	error_bloque : error . bloque_sentencias '}'  (5)

	IDE  shift 2
	IF  shift 3
	OUT  shift 4
	UINT  shift 5
	DOUBLE  shift 6
	FOR  shift 7
	PROC  shift 8
	.  error

	sentencia  goto 24
	bloque_sentencias  goto 25
	declaracion  goto 14
	ejecucion  goto 15
	error_sentencia  goto 16
	tipo  goto 17
	procedimiento  goto 18
	control  goto 19
	seleccion  goto 20
	salida  goto 21
	asignacion  goto 22
	invocacion  goto 23


state 2
	asignacion : IDE . '=' expresion  (57)
	invocacion : IDE . '(' parametros ')'  (58)

	'('  shift 26
	'='  shift 27
	.  error


state 3
	seleccion : IF . '(' condicion ')' '{' bloque_sentencias '}' END_IF  (54)
	seleccion : IF . '(' condicion ')' '{' bloque_sentencias '}' ELSE '{' bloque_sentencias '}' END_IF  (55)

	'('  shift 28
	.  error


state 4
	salida : OUT . '(' CADENA ')'  (56)

	'('  shift 29
	.  error


state 5
	tipo : UINT .  (24)

	.  reduce 24


state 6
	tipo : DOUBLE .  (25)

	.  reduce 25


state 7
	control : FOR . '(' IDE '=' CTE_UINT ';' condicion ';' inc_decr CTE_UINT ')' '{' bloque_sentencias '}'  (31)

	'('  shift 30
	.  error


state 8
	procedimiento : PROC . IDE '(' lista_de_parametros ')' NI '=' CTE_UINT '{' bloque_sentencias '}'  (18)

	IDE  shift 31
	.  error


state 9
	bloque : '{' . bloque_sentencias '}'  (3)
	error_bloque : '{' . bloque_sentencias error  (6)

	IDE  shift 2
	IF  shift 3
	OUT  shift 4
	UINT  shift 5
	DOUBLE  shift 6
	FOR  shift 7
	PROC  shift 8
	.  error

	sentencia  goto 24
	bloque_sentencias  goto 32
	declaracion  goto 14
	ejecucion  goto 15
	error_sentencia  goto 16
	tipo  goto 17
	procedimiento  goto 18
	control  goto 19
	seleccion  goto 20
	salida  goto 21
	asignacion  goto 22
	invocacion  goto 23


state 10
	$accept : programa . $end  (0)

	$end  accept


state 11
	programa : bloque .  (1)

	.  reduce 1


state 12
	bloque : sentencia .  (2)

	.  reduce 2


state 13
	bloque : error_bloque .  (4)

	.  reduce 4


state 14
	sentencia : declaracion . ';'  (9)
	error_sentencia : declaracion . error  (12)

	error  shift 33
	';'  shift 34
	.  error


state 15
	sentencia : ejecucion . ';'  (10)
	error_sentencia : ejecucion . error  (13)

	error  shift 35
	';'  shift 36
	.  error


state 16
	sentencia : error_sentencia .  (11)

	.  reduce 11


state 17
	declaracion : tipo . lista_de_variables  (14)

	IDE  shift 37
	.  error

	lista_de_variables  goto 38


state 18
	declaracion : procedimiento .  (15)

	.  reduce 15


state 19
	ejecucion : control .  (26)

	.  reduce 26


state 20
	ejecucion : seleccion .  (27)

	.  reduce 27


state 21
	ejecucion : salida .  (28)

	.  reduce 28


state 22
	ejecucion : asignacion .  (29)

	.  reduce 29


state 23
	ejecucion : invocacion .  (30)

	.  reduce 30


state 24
	bloque_sentencias : sentencia .  (7)

	.  reduce 7


state 25
	error_bloque : error bloque_sentencias . '}'  (5)
	bloque_sentencias : bloque_sentencias . sentencia  (8)

	IDE  shift 2
	IF  shift 3
	OUT  shift 4
	UINT  shift 5
	DOUBLE  shift 6
	FOR  shift 7
	PROC  shift 8
	'}'  shift 39
	.  error

	sentencia  goto 40
	declaracion  goto 14
	ejecucion  goto 15
	error_sentencia  goto 16
	tipo  goto 17
	procedimiento  goto 18
	control  goto 19
	seleccion  goto 20
	salida  goto 21
	asignacion  goto 22
	invocacion  goto 23


state 26
	invocacion : IDE '(' . parametros ')'  (58)

	IDE  shift 41
	.  error

	parametros  goto 42


state 27
	asignacion : IDE '=' . expresion  (57)

	IDE  shift 43
	CTE_UINT  shift 44
	CTE_DOUBLE  shift 45
	DOUBLE  shift 46
	'-'  shift 47
	.  error

	expresion  goto 48
	termino  goto 49
	factor  goto 50
	cte  goto 51
	factor_negado  goto 52


state 28
	seleccion : IF '(' . condicion ')' '{' bloque_sentencias '}' END_IF  (54)
	seleccion : IF '(' . condicion ')' '{' bloque_sentencias '}' ELSE '{' bloque_sentencias '}' END_IF  (55)

	IDE  shift 43
	CTE_UINT  shift 44
	CTE_DOUBLE  shift 45
	DOUBLE  shift 46
	'-'  shift 47
	.  error

	condicion  goto 53
	expresion  goto 54
	termino  goto 49
	factor  goto 50
	cte  goto 51
	factor_negado  goto 52


state 29
	salida : OUT '(' . CADENA ')'  (56)

	CADENA  shift 55
	.  error


state 30
	control : FOR '(' . IDE '=' CTE_UINT ';' condicion ';' inc_decr CTE_UINT ')' '{' bloque_sentencias '}'  (31)

	IDE  shift 56
	.  error


state 31
	procedimiento : PROC IDE . '(' lista_de_parametros ')' NI '=' CTE_UINT '{' bloque_sentencias '}'  (18)

	'('  shift 57
	.  error


state 32
	bloque : '{' bloque_sentencias . '}'  (3)
	error_bloque : '{' bloque_sentencias . error  (6)
	bloque_sentencias : bloque_sentencias . sentencia  (8)

	error  shift 58
	IDE  shift 2
	IF  shift 3
	OUT  shift 4
	UINT  shift 5
	DOUBLE  shift 6
	FOR  shift 7
	PROC  shift 8
	'}'  shift 59
	.  error

	sentencia  goto 40
	declaracion  goto 14
	ejecucion  goto 15
	error_sentencia  goto 16
	tipo  goto 17
	procedimiento  goto 18
	control  goto 19
	seleccion  goto 20
	salida  goto 21
	asignacion  goto 22
	invocacion  goto 23


state 33
	error_sentencia : declaracion error .  (12)

	.  reduce 12


state 34
	sentencia : declaracion ';' .  (9)

	.  reduce 9


state 35
	error_sentencia : ejecucion error .  (13)

	.  reduce 13


state 36
	sentencia : ejecucion ';' .  (10)

	.  reduce 10


state 37
	lista_de_variables : IDE .  (17)

	.  reduce 17


state 38
	declaracion : tipo lista_de_variables .  (14)
	lista_de_variables : lista_de_variables . ',' IDE  (16)

	','  shift 60
	error  reduce 14
	';'  reduce 14


state 39
	error_bloque : error bloque_sentencias '}' .  (5)

	.  reduce 5


state 40
	bloque_sentencias : bloque_sentencias sentencia .  (8)

	.  reduce 8


state 41
	parametros : IDE . ':' IDE  (59)

	':'  shift 61
	.  error


state 42
	invocacion : IDE '(' parametros . ')'  (58)
	parametros : parametros . ',' IDE ':' IDE  (60)

	','  shift 62
	')'  shift 63
	.  error


state 43
	factor : IDE .  (42)

	.  reduce 42


state 44
	cte : CTE_UINT .  (44)

	.  reduce 44


state 45
	cte : CTE_DOUBLE .  (43)

	.  reduce 43


state 46
	expresion : DOUBLE . '(' expresion ')'  (36)

	'('  shift 64
	.  error


state 47
	factor_negado : '-' . CTE_DOUBLE  (45)

	CTE_DOUBLE  shift 65
	.  error


state 48
	expresion : expresion . '+' termino  (33)
	expresion : expresion . '-' termino  (34)
	asignacion : IDE '=' expresion .  (57)

	'+'  shift 66
	'-'  shift 67
	error  reduce 57
	';'  reduce 57


state 49
	expresion : termino .  (35)
	termino : termino . '*' factor  (37)
	termino : termino . '/' factor  (38)

	'*'  shift 68
	'/'  shift 69
	error  reduce 35
	MAYOR_IGUAL  reduce 35
	MENOR_IGUAL  reduce 35
	IGUAL_IGUAL  reduce 35
	DISTINTO  reduce 35
	';'  reduce 35
	')'  reduce 35
	'+'  reduce 35
	'-'  reduce 35
	'<'  reduce 35
	'>'  reduce 35


state 50
	termino : factor .  (39)

	.  reduce 39


state 51
	factor : cte .  (40)

	.  reduce 40


state 52
	factor : factor_negado .  (41)

	.  reduce 41


state 53
	seleccion : IF '(' condicion . ')' '{' bloque_sentencias '}' END_IF  (54)
	seleccion : IF '(' condicion . ')' '{' bloque_sentencias '}' ELSE '{' bloque_sentencias '}' END_IF  (55)

	')'  shift 70
	.  error


state 54
	condicion : expresion . comparador expresion  (32)
	expresion : expresion . '+' termino  (33)
	expresion : expresion . '-' termino  (34)

	MAYOR_IGUAL  shift 71
	MENOR_IGUAL  shift 72
	IGUAL_IGUAL  shift 73
	DISTINTO  shift 74
	'+'  shift 66
	'-'  shift 67
	'<'  shift 75
	'>'  shift 76
	.  error

	comparador  goto 77


state 55
	salida : OUT '(' CADENA . ')'  (56)

	')'  shift 78
	.  error


state 56
	control : FOR '(' IDE . '=' CTE_UINT ';' condicion ';' inc_decr CTE_UINT ')' '{' bloque_sentencias '}'  (31)

	'='  shift 79
	.  error


state 57
	procedimiento : PROC IDE '(' . lista_de_parametros ')' NI '=' CTE_UINT '{' bloque_sentencias '}'  (18)

	UINT  shift 5
	DOUBLE  shift 6
	REF  shift 80
	.  error

	tipo  goto 81
	lista_de_parametros  goto 82
	param  goto 83


state 58
	error_bloque : '{' bloque_sentencias error .  (6)

	.  reduce 6


state 59
	bloque : '{' bloque_sentencias '}' .  (3)

	.  reduce 3


state 60
	lista_de_variables : lista_de_variables ',' . IDE  (16)

	IDE  shift 84
	.  error


state 61
	parametros : IDE ':' . IDE  (59)

	IDE  shift 85
	.  error


state 62
	parametros : parametros ',' . IDE ':' IDE  (60)

	IDE  shift 86
	.  error


state 63
	invocacion : IDE '(' parametros ')' .  (58)

	.  reduce 58


state 64
	expresion : DOUBLE '(' . expresion ')'  (36)

	IDE  shift 43
	CTE_UINT  shift 44
	CTE_DOUBLE  shift 45
	DOUBLE  shift 46
	'-'  shift 47
	.  error

	expresion  goto 87
	termino  goto 49
	factor  goto 50
	cte  goto 51
	factor_negado  goto 52


state 65
	factor_negado : '-' CTE_DOUBLE .  (45)

	.  reduce 45


state 66
	expresion : expresion '+' . termino  (33)

	IDE  shift 43
	CTE_UINT  shift 44
	CTE_DOUBLE  shift 45
	'-'  shift 47
	.  error

	termino  goto 88
	factor  goto 50
	cte  goto 51
	factor_negado  goto 52


state 67
	expresion : expresion '-' . termino  (34)

	IDE  shift 43
	CTE_UINT  shift 44
	CTE_DOUBLE  shift 45
	'-'  shift 47
	.  error

	termino  goto 89
	factor  goto 50
	cte  goto 51
	factor_negado  goto 52


state 68
	termino : termino '*' . factor  (37)

	IDE  shift 43
	CTE_UINT  shift 44
	CTE_DOUBLE  shift 45
	'-'  shift 47
	.  error

	factor  goto 90
	cte  goto 51
	factor_negado  goto 52


state 69
	termino : termino '/' . factor  (38)

	IDE  shift 43
	CTE_UINT  shift 44
	CTE_DOUBLE  shift 45
	'-'  shift 47
	.  error

	factor  goto 91
	cte  goto 51
	factor_negado  goto 52


state 70
	seleccion : IF '(' condicion ')' . '{' bloque_sentencias '}' END_IF  (54)
	seleccion : IF '(' condicion ')' . '{' bloque_sentencias '}' ELSE '{' bloque_sentencias '}' END_IF  (55)

	'{'  shift 92
	.  error


state 71
	comparador : MAYOR_IGUAL .  (49)

	.  reduce 49


state 72
	comparador : MENOR_IGUAL .  (50)

	.  reduce 50


state 73
	comparador : IGUAL_IGUAL .  (48)

	.  reduce 48


state 74
	comparador : DISTINTO .  (51)

	.  reduce 51


state 75
	comparador : '<' .  (46)

	.  reduce 46


state 76
	comparador : '>' .  (47)

	.  reduce 47


state 77
	condicion : expresion comparador . expresion  (32)

	IDE  shift 43
	CTE_UINT  shift 44
	CTE_DOUBLE  shift 45
	DOUBLE  shift 46
	'-'  shift 47
	.  error

	expresion  goto 93
	termino  goto 49
	factor  goto 50
	cte  goto 51
	factor_negado  goto 52


state 78
	salida : OUT '(' CADENA ')' .  (56)

	.  reduce 56


state 79
	control : FOR '(' IDE '=' . CTE_UINT ';' condicion ';' inc_decr CTE_UINT ')' '{' bloque_sentencias '}'  (31)

	CTE_UINT  shift 94
	.  error


state 80
	param : REF . tipo IDE  (23)

	UINT  shift 5
	DOUBLE  shift 6
	.  error

	tipo  goto 95


state 81
	param : tipo . IDE  (22)

	IDE  shift 96
	.  error


state 82
	procedimiento : PROC IDE '(' lista_de_parametros . ')' NI '=' CTE_UINT '{' bloque_sentencias '}'  (18)

	')'  shift 97
	.  error


state 83
	lista_de_parametros : param .  (19)
	lista_de_parametros : param . ',' param  (20)
	lista_de_parametros : param . ',' param ',' param  (21)

	','  shift 98
	')'  reduce 19


state 84
	lista_de_variables : lista_de_variables ',' IDE .  (16)

	.  reduce 16


state 85
	parametros : IDE ':' IDE .  (59)

	.  reduce 59


state 86
	parametros : parametros ',' IDE . ':' IDE  (60)

	':'  shift 99
	.  error


state 87
	expresion : expresion . '+' termino  (33)
	expresion : expresion . '-' termino  (34)
	expresion : DOUBLE '(' expresion . ')'  (36)

	')'  shift 100
	'+'  shift 66
	'-'  shift 67
	.  error


state 88
	expresion : expresion '+' termino .  (33)
	termino : termino . '*' factor  (37)
	termino : termino . '/' factor  (38)

	'*'  shift 68
	'/'  shift 69
	error  reduce 33
	MAYOR_IGUAL  reduce 33
	MENOR_IGUAL  reduce 33
	IGUAL_IGUAL  reduce 33
	DISTINTO  reduce 33
	';'  reduce 33
	')'  reduce 33
	'+'  reduce 33
	'-'  reduce 33
	'<'  reduce 33
	'>'  reduce 33


state 89
	expresion : expresion '-' termino .  (34)
	termino : termino . '*' factor  (37)
	termino : termino . '/' factor  (38)

	'*'  shift 68
	'/'  shift 69
	error  reduce 34
	MAYOR_IGUAL  reduce 34
	MENOR_IGUAL  reduce 34
	IGUAL_IGUAL  reduce 34
	DISTINTO  reduce 34
	';'  reduce 34
	')'  reduce 34
	'+'  reduce 34
	'-'  reduce 34
	'<'  reduce 34
	'>'  reduce 34


state 90
	termino : termino '*' factor .  (37)

	.  reduce 37


state 91
	termino : termino '/' factor .  (38)

	.  reduce 38


state 92
	seleccion : IF '(' condicion ')' '{' . bloque_sentencias '}' END_IF  (54)
	seleccion : IF '(' condicion ')' '{' . bloque_sentencias '}' ELSE '{' bloque_sentencias '}' END_IF  (55)

	IDE  shift 2
	IF  shift 3
	OUT  shift 4
	UINT  shift 5
	DOUBLE  shift 6
	FOR  shift 7
	PROC  shift 8
	.  error

	sentencia  goto 24
	bloque_sentencias  goto 101
	declaracion  goto 14
	ejecucion  goto 15
	error_sentencia  goto 16
	tipo  goto 17
	procedimiento  goto 18
	control  goto 19
	seleccion  goto 20
	salida  goto 21
	asignacion  goto 22
	invocacion  goto 23


state 93
	condicion : expresion comparador expresion .  (32)
	expresion : expresion . '+' termino  (33)
	expresion : expresion . '-' termino  (34)

	'+'  shift 66
	'-'  shift 67
	';'  reduce 32
	')'  reduce 32


state 94
	control : FOR '(' IDE '=' CTE_UINT . ';' condicion ';' inc_decr CTE_UINT ')' '{' bloque_sentencias '}'  (31)

	';'  shift 102
	.  error


state 95
	param : REF tipo . IDE  (23)

	IDE  shift 103
	.  error


state 96
	param : tipo IDE .  (22)

	.  reduce 22


state 97
	procedimiento : PROC IDE '(' lista_de_parametros ')' . NI '=' CTE_UINT '{' bloque_sentencias '}'  (18)

	NI  shift 104
	.  error


state 98
	lista_de_parametros : param ',' . param  (20)
	lista_de_parametros : param ',' . param ',' param  (21)

	UINT  shift 5
	DOUBLE  shift 6
	REF  shift 80
	.  error

	tipo  goto 81
	param  goto 105


state 99
	parametros : parametros ',' IDE ':' . IDE  (60)

	IDE  shift 106
	.  error


state 100
	expresion : DOUBLE '(' expresion ')' .  (36)

	.  reduce 36


state 101
	bloque_sentencias : bloque_sentencias . sentencia  (8)
	seleccion : IF '(' condicion ')' '{' bloque_sentencias . '}' END_IF  (54)
	seleccion : IF '(' condicion ')' '{' bloque_sentencias . '}' ELSE '{' bloque_sentencias '}' END_IF  (55)

	IDE  shift 2
	IF  shift 3
	OUT  shift 4
	UINT  shift 5
	DOUBLE  shift 6
	FOR  shift 7
	PROC  shift 8
	'}'  shift 107
	.  error

	sentencia  goto 40
	declaracion  goto 14
	ejecucion  goto 15
	error_sentencia  goto 16
	tipo  goto 17
	procedimiento  goto 18
	control  goto 19
	seleccion  goto 20
	salida  goto 21
	asignacion  goto 22
	invocacion  goto 23


state 102
	control : FOR '(' IDE '=' CTE_UINT ';' . condicion ';' inc_decr CTE_UINT ')' '{' bloque_sentencias '}'  (31)

	IDE  shift 43
	CTE_UINT  shift 44
	CTE_DOUBLE  shift 45
	DOUBLE  shift 46
	'-'  shift 47
	.  error

	condicion  goto 108
	expresion  goto 54
	termino  goto 49
	factor  goto 50
	cte  goto 51
	factor_negado  goto 52


state 103
	param : REF tipo IDE .  (23)

	.  reduce 23


state 104
	procedimiento : PROC IDE '(' lista_de_parametros ')' NI . '=' CTE_UINT '{' bloque_sentencias '}'  (18)

	'='  shift 109
	.  error


state 105
	lista_de_parametros : param ',' param .  (20)
	lista_de_parametros : param ',' param . ',' param  (21)

	','  shift 110
	')'  reduce 20


state 106
	parametros : parametros ',' IDE ':' IDE .  (60)

	.  reduce 60


state 107
	seleccion : IF '(' condicion ')' '{' bloque_sentencias '}' . END_IF  (54)
	seleccion : IF '(' condicion ')' '{' bloque_sentencias '}' . ELSE '{' bloque_sentencias '}' END_IF  (55)

	ELSE  shift 111
	END_IF  shift 112
	.  error


state 108
	control : FOR '(' IDE '=' CTE_UINT ';' condicion . ';' inc_decr CTE_UINT ')' '{' bloque_sentencias '}'  (31)

	';'  shift 113
	.  error


state 109
	procedimiento : PROC IDE '(' lista_de_parametros ')' NI '=' . CTE_UINT '{' bloque_sentencias '}'  (18)

	CTE_UINT  shift 114
	.  error


state 110
	lista_de_parametros : param ',' param ',' . param  (21)

	UINT  shift 5
	DOUBLE  shift 6
	REF  shift 80
	.  error

	tipo  goto 81
	param  goto 115


state 111
	seleccion : IF '(' condicion ')' '{' bloque_sentencias '}' ELSE . '{' bloque_sentencias '}' END_IF  (55)

	'{'  shift 116
	.  error


state 112
	seleccion : IF '(' condicion ')' '{' bloque_sentencias '}' END_IF .  (54)

	.  reduce 54


state 113
	control : FOR '(' IDE '=' CTE_UINT ';' condicion ';' . inc_decr CTE_UINT ')' '{' bloque_sentencias '}'  (31)

	UP  shift 117
	DOWN  shift 118
	.  error

	inc_decr  goto 119


state 114
	procedimiento : PROC IDE '(' lista_de_parametros ')' NI '=' CTE_UINT . '{' bloque_sentencias '}'  (18)

	'{'  shift 120
	.  error


state 115
	lista_de_parametros : param ',' param ',' param .  (21)

	.  reduce 21


state 116
	seleccion : IF '(' condicion ')' '{' bloque_sentencias '}' ELSE '{' . bloque_sentencias '}' END_IF  (55)

	IDE  shift 2
	IF  shift 3
	OUT  shift 4
	UINT  shift 5
	DOUBLE  shift 6
	FOR  shift 7
	PROC  shift 8
	.  error

	sentencia  goto 24
	bloque_sentencias  goto 121
	declaracion  goto 14
	ejecucion  goto 15
	error_sentencia  goto 16
	tipo  goto 17
	procedimiento  goto 18
	control  goto 19
	seleccion  goto 20
	salida  goto 21
	asignacion  goto 22
	invocacion  goto 23


state 117
	inc_decr : UP .  (52)

	.  reduce 52


state 118
	inc_decr : DOWN .  (53)

	.  reduce 53


state 119
	control : FOR '(' IDE '=' CTE_UINT ';' condicion ';' inc_decr . CTE_UINT ')' '{' bloque_sentencias '}'  (31)

	CTE_UINT  shift 122
	.  error


state 120
	procedimiento : PROC IDE '(' lista_de_parametros ')' NI '=' CTE_UINT '{' . bloque_sentencias '}'  (18)

	IDE  shift 2
	IF  shift 3
	OUT  shift 4
	UINT  shift 5
	DOUBLE  shift 6
	FOR  shift 7
	PROC  shift 8
	.  error

	sentencia  goto 24
	bloque_sentencias  goto 123
	declaracion  goto 14
	ejecucion  goto 15
	error_sentencia  goto 16
	tipo  goto 17
	procedimiento  goto 18
	control  goto 19
	seleccion  goto 20
	salida  goto 21
	asignacion  goto 22
	invocacion  goto 23


state 121
	bloque_sentencias : bloque_sentencias . sentencia  (8)
	seleccion : IF '(' condicion ')' '{' bloque_sentencias '}' ELSE '{' bloque_sentencias . '}' END_IF  (55)

	IDE  shift 2
	IF  shift 3
	OUT  shift 4
	UINT  shift 5
	DOUBLE  shift 6
	FOR  shift 7
	PROC  shift 8
	'}'  shift 124
	.  error

	sentencia  goto 40
	declaracion  goto 14
	ejecucion  goto 15
	error_sentencia  goto 16
	tipo  goto 17
	procedimiento  goto 18
	control  goto 19
	seleccion  goto 20
	salida  goto 21
	asignacion  goto 22
	invocacion  goto 23


state 122
	control : FOR '(' IDE '=' CTE_UINT ';' condicion ';' inc_decr CTE_UINT . ')' '{' bloque_sentencias '}'  (31)

	')'  shift 125
	.  error


state 123
	bloque_sentencias : bloque_sentencias . sentencia  (8)
	procedimiento : PROC IDE '(' lista_de_parametros ')' NI '=' CTE_UINT '{' bloque_sentencias . '}'  (18)

	IDE  shift 2
	IF  shift 3
	OUT  shift 4
	UINT  shift 5
	DOUBLE  shift 6
	FOR  shift 7
	PROC  shift 8
	'}'  shift 126
	.  error

	sentencia  goto 40
	declaracion  goto 14
	ejecucion  goto 15
	error_sentencia  goto 16
	tipo  goto 17
	procedimiento  goto 18
	control  goto 19
	seleccion  goto 20
	salida  goto 21
	asignacion  goto 22
	invocacion  goto 23


state 124
	seleccion : IF '(' condicion ')' '{' bloque_sentencias '}' ELSE '{' bloque_sentencias '}' . END_IF  (55)

	END_IF  shift 127
	.  error


state 125
	control : FOR '(' IDE '=' CTE_UINT ';' condicion ';' inc_decr CTE_UINT ')' . '{' bloque_sentencias '}'  (31)

	'{'  shift 128
	.  error


state 126
	procedimiento : PROC IDE '(' lista_de_parametros ')' NI '=' CTE_UINT '{' bloque_sentencias '}' .  (18)

	.  reduce 18


state 127
	seleccion : IF '(' condicion ')' '{' bloque_sentencias '}' ELSE '{' bloque_sentencias '}' END_IF .  (55)

	.  reduce 55


state 128
	control : FOR '(' IDE '=' CTE_UINT ';' condicion ';' inc_decr CTE_UINT ')' '{' . bloque_sentencias '}'  (31)

	IDE  shift 2
	IF  shift 3
	OUT  shift 4
	UINT  shift 5
	DOUBLE  shift 6
	FOR  shift 7
	PROC  shift 8
	.  error

	sentencia  goto 24
	bloque_sentencias  goto 129
	declaracion  goto 14
	ejecucion  goto 15
	error_sentencia  goto 16
	tipo  goto 17
	procedimiento  goto 18
	control  goto 19
	seleccion  goto 20
	salida  goto 21
	asignacion  goto 22
	invocacion  goto 23


state 129
	bloque_sentencias : bloque_sentencias . sentencia  (8)
	control : FOR '(' IDE '=' CTE_UINT ';' condicion ';' inc_decr CTE_UINT ')' '{' bloque_sentencias . '}'  (31)

	IDE  shift 2
	IF  shift 3
	OUT  shift 4
	UINT  shift 5
	DOUBLE  shift 6
	FOR  shift 7
	PROC  shift 8
	'}'  shift 130
	.  error

	sentencia  goto 40
	declaracion  goto 14
	ejecucion  goto 15
	error_sentencia  goto 16
	tipo  goto 17
	procedimiento  goto 18
	control  goto 19
	seleccion  goto 20
	salida  goto 21
	asignacion  goto 22
	invocacion  goto 23


state 130
	control : FOR '(' IDE '=' CTE_UINT ';' condicion ';' inc_decr CTE_UINT ')' '{' bloque_sentencias '}' .  (31)

	.  reduce 31


39 terminals, 28 nonterminals
61 grammar rules, 131 states
